  - support for multiple transported species in a single case (see the notes
  for porousScalarTransportFoam)
  - epsTotal now defaults to 1

### Libraries

- toolsGIS

  - uniformInfiltrationEventFile replaced by infiltrationEventFile
  infiltration for groundwater2DFoam can be uniform or non-uniform (value
  specified at each time for each cell in event file)

- eventFlux
  - now accept zero flux field (phi=0)
  - FatalError is handle if fixed flux > 0 and phi = 0
  - new static function through wich solvers can designate a list to be
  populated with non-owning pointers to patchEventFiles associated with
  instances of this BC. This scheme replaces the previous method which used an
  IODictionary to communicate with solvers. If no list is passed, any
  eventFlux condition with an event file will trigger a fatal error.

- eventInfiltration
  - new static function through wich solvers can designate a list to be
  populated with non-owning pointers to patchEventFiles associated with
  instances of this BC. This scheme replaces the previous method which used an
  IODictionary to communicate with solvers. If no list is passed, any
  eventInfiltration condition with an event file will trigger a fatal error.

- porousModels

  - relativePermeabilityModel/capillarityModel has new function Se() which
  return effective saturation.

- multiscalarMixture

  - new class developed to support multiple species in transport solvers.
  Objects of this class can read the properties for all species in a case,
  and also contain their concentration fields. They also do most of the work
  required to support species source events ("eventFileTracerSource" entries); 
  however, time tracking cannot be handled internally by this class and 
  therefore solvers that support this type of events have to, on construction,
  refer to a list that will be populated with non-owning pointers to any event
  files that are found (otherwise the solver will be deemed incompatible with 