@@ -1,4 +1,6 @@
 date 0
 250 0 0.5 -0.001
 date 72000
+250 0 0.5 -0.001
+date 72000
 250 0 0.5 0
