@@ -47,9 +47,7 @@ adjustTimeStep yes;
 
 runTimeModifiable true;
 
-dCmax           0.1;
-
-dCresidual      1e-3;
+truncationError 0.01;
 
 maxDeltaT       1e+9;
 
